fix: disable restart of lnet.service by default
The role should be able to update the configuration file while the file
system is mounted and accessed. The new configuration will apply during
a next restart of the service. If one needs to restart the service as
soon as possible, use `lustre_lnet_restart=true`.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,8 @@ lustre_configure_repos: false
 lustre_upgrade: false
 
 lustre_lnet_networks: "o2ib0(ib0)"
+# Do not restart lnet service by default
+lustre_lnet_restart: false
 
 lustre_filesystems: []
 
