--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -2,6 +2,6 @@
 - name: Install Lustre packages for Debian OS family
   ansible.builtin.package:
     name:
-      - "lustre-client-modules-{{ ansible_facts['kernel'] }}"
+      - "lustre-client-modules-{{ lustre_dkms | bool | ternary('dkms', ansible_facts['kernel']) }}"
       - lustre-client-utils
     state: "{{ 'latest' if lustre_upgrade else 'present' }}"
