feat: Add support for DKMS patches
Add ability to apply custom patches to DKMS-built Lustre modules. This
feature allows users to apply fixes or customizations to the Lustre
client modules before building.

Key changes:
- Add lustre_dkms_patches variable for patch configuration
- Create dkms-patches.yml for patch handling tasks
- Add dkms.conf.j2 template for DKMS configuration
- Update documentation with examples and troubleshooting

The feature requires:
- lustre_dkms set to true
- Patches in git format
- Sequential patch ordering
- Version matching installed Lustre version

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,9 +11,18 @@ lustre_configure_repos: false
 # Set to true to upgrade to latest version
 lustre_upgrade: false
 
+# DKMS Configuration
+# ------------------
 # Whether to use DKMS packages instead of pre-built modules
 # Set to true if you need to build modules for custom kernels
 lustre_dkms: false
+
+# List of patches to apply to DKMS source
+# Each patch should be a dictionary with:
+#   - src: Path to the patch file (relative to playbook)
+#   - version: Lustre version this patch applies to (e.g. "2.15.6")
+#   - order: Order in which the patch should be applied (0-based index)
+lustre_dkms_patches: []
 
 # LNet Configuration
 # -----------------
