--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,11 @@
     file: "repositories-{{ ansible_facts['os_family'] }}.yml"
   when: lustre_configure_repos
 
+- name: Apply DKMS patches
+  ansible.builtin.include_tasks:
+    file: dkms-patches.yml
+  when: lustre_dkms | bool and lustre_dkms_patches | length > 0
+
 - name: Install Lustre client
   ansible.builtin.include_tasks:
     file: "install-{{ ansible_facts['os_family'] }}.yml"
