feat: Allow to define a custom lustre.conf
The default template will not cover advanced configuration.

Remove the test to check if `lustre_lnet_networks` is defined since it
is by default. Moreover, we want to manage the `lustre.conf` without
this variable when using `lustre_conf`.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -54,6 +54,13 @@ lustre_lnet_conf: |
                 fmr_cache: 1
             CPT: "[0,1]"
 
+# Lustre Configuration
+# --------------------
+# lustre_conf: |-
+#   options lnet network="{{ lustre_lnet_networks }}"
+#   options ko2iblnd credits=7424
+#   [...]
+
 # Filesystem Configuration
 # ----------------------
 # List of Lustre filesystems to mount
