--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,8 +3,13 @@
   ansible.builtin.apt:
     update_cache: true
 
+- name: Run daemon-reload for LNet service
+  ansible.builtin.systemd_service:
+    name: lnet.service
+    daemon_reload: true
+
 - name: Restart LNet service
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     name: lnet.service
     state: restarted
-  when: lustre_lnet_restart
+  when: lustre_lnet_restart | bool
